# ForestFloor

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  LOAD.md  README.md
.github/workflows/: ci.yml  release.yml
_CPack_Packages/Darwin/DragNDrop/forest-floor-0.1.0-Darwin-arm64/Forest Floor.app/Contents/: Info.plist
_CPack_Packages/Darwin/DragNDrop/forest-floor-0.1.0-Darwin-arm64/Forest Floor.app/Contents/MacOS/: Forest Floor
_CPack_Packages/Darwin/DragNDrop/forest-floor-0.1.0-Darwin-arm64/Forest Floor.app/Contents/Resources/: forest-floor.icns
_CPack_Packages/Darwin/DragNDrop/forest-floor-0.1.0-Darwin-arm64/share/doc/: ICON.MD  README.md  ROADMAP.md  SECURITY.md
_CPack_Packages/Darwin/DragNDrop/forest-floor-0.1.0-Darwin-arm64/share/forest-floor/starter-kit/: README.md  default.ffproject
apps/desktop/: CMakeLists.txt
apps/desktop/resources/macos/: Info.plist.in
apps/desktop/resources/windows/: forest_floor_desktop.rc.in
apps/desktop/src/: audio_backend.hpp  audio_backend_coreaudio.mm  audio_backend_stub.cpp  macos_ui.hpp  macos_ui.mm  main.cpp  midi_backend.hpp  midi_backend_coremidi.mm  midi_backend_stub.cpp  project_io.cpp  project_io.hpp  runtime.cpp  runtime.hpp  sample_loader.cpp  sample_loader.hpp
apps/desktop/tests/: project_and_sample_tests.cpp
assets/icons/: README.md
assets/starter-kit/: default.ffproject
audits/: PATCHES01.md
docs/: 00-overview.md
docs/architecture/: ARCHITECTURE.md  MODULES.md  THREADING_AND_REALTIME.md
docs/community/: CONTRIBUTING.md  SECURITY.md
docs/development/: WORKFLOW.md
docs/project/: DECISIONS.md  ICON.md  ROADMAP.md
docs/quality/: TESTING.md
docs/release/: RELEASE_CHECKLIST.md
docs/specs/: EVENTS.md  PARAMETERS.md  PLUGIN_SDK.md  STATE_AND_PRESETS.md
fixtures/interop/: phase2_engine_recall_updates.csv
tools/scripts/: dev-check.sh  generate-icon-assets.py  release-check.sh  release-package.sh
